; ModuleID = '/home/carl/AnghaBench/git/extr_notes.c_determine_fanout.c'
source_filename = "/home/carl/AnghaBench/git/extr_notes.c_determine_fanout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.int_node = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8 (%struct.int_node*, i8, i8)* @determine_fanout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal zeroext i8 @determine_fanout(%struct.int_node* %0, i8 zeroext %1, i8 zeroext %2) #0 {
  %4 = alloca i8, align 1
  %5 = alloca %struct.int_node*, align 8
  %6 = alloca i8, align 1
  %7 = alloca i8, align 1
  %8 = alloca i32, align 4
  store %struct.int_node* %0, %struct.int_node** %5, align 8
  store i8 %1, i8* %6, align 1
  store i8 %2, i8* %7, align 1
  %9 = load i8, i8* %6, align 1
  %10 = zext i8 %9 to i32
  %11 = srem i32 %10, 2
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %20, label %13

13:                                               ; preds = %3
  %14 = load i8, i8* %6, align 1
  %15 = zext i8 %14 to i32
  %16 = load i8, i8* %7, align 1
  %17 = zext i8 %16 to i32
  %18 = mul nsw i32 2, %17
  %19 = icmp sgt i32 %15, %18
  br i1 %19, label %20, label %22

20:                                               ; preds = %13, %3
  %21 = load i8, i8* %7, align 1
  store i8 %21, i8* %4, align 1
  br label %46

22:                                               ; preds = %13
  store i32 0, i32* %8, align 4
  br label %23

23:                                               ; preds = %38, %22
  %24 = load i32, i32* %8, align 4
  %25 = icmp ult i32 %24, 16
  br i1 %25, label %26, label %41

26:                                               ; preds = %23
  %27 = load %struct.int_node*, %struct.int_node** %5, align 8
  %28 = getelementptr inbounds %struct.int_node, %struct.int_node* %27, i32 0, i32 0
  %29 = load i32*, i32** %28, align 8
  %30 = load i32, i32* %8, align 4
  %31 = zext i32 %30 to i64
  %32 = getelementptr inbounds i32, i32* %29, i64 %31
  %33 = load i32, i32* %32, align 4
  %34 = call i32 @GET_PTR_TYPE(i32 %33)
  switch i32 %34, label %36 [
    i32 128, label %35
    i32 129, label %35
  ]

35:                                               ; preds = %26, %26
  br label %38

36:                                               ; preds = %26
  %37 = load i8, i8* %7, align 1
  store i8 %37, i8* %4, align 1
  br label %46

38:                                               ; preds = %35
  %39 = load i32, i32* %8, align 4
  %40 = add i32 %39, 1
  store i32 %40, i32* %8, align 4
  br label %23

41:                                               ; preds = %23
  %42 = load i8, i8* %7, align 1
  %43 = zext i8 %42 to i32
  %44 = add nsw i32 %43, 1
  %45 = trunc i32 %44 to i8
  store i8 %45, i8* %4, align 1
  br label %46

46:                                               ; preds = %41, %36, %20
  %47 = load i8, i8* %4, align 1
  ret i8 %47
}

declare dso_local i32 @GET_PTR_TYPE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
